Contrast fix

--- a/settings/styles.css
+++ b/settings/styles.css
@@ -104,3 +104,7 @@ input[type="color"]::-moz-color-swatch {
 .dark-mode input[type="color"]{
     background-color: white !important;
 }
+.dark-mode *{
+    color:black !important;
+}
+.dark-mode button, .dark-mode input[type="submit"]{color:#fff!important}
